--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -37,8 +37,12 @@ body {
 }
 
 .teamSection p {
+  margin-left: 10%;
+  margin-right: 10%;
+  line-height: 1.5;
   font-size: 1.2rem;
   color: grey;
+  margin-top: 40px;
   margin-bottom: 40px;
 }
 
