--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -143,6 +143,17 @@ hr{
     transform: scale(1.03);
 }
 
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px); 
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 
 @media screen and (max-width: 768px) {
     .section-1 {
