--- a/src/Pages/Services/Services.css
+++ b/src/Pages/Services/Services.css
@@ -1,6 +1,11 @@
-.services {
+.head h2{
     padding-top: 10vh;
-    padding-bottom: 10vh;
+    text-align: center;
+    font-size: 1.8rem;
+}
+.services {
+    padding-top: 3vh;
+    padding-bottom: 15vh;
     text-align: center;
     margin-left: 5%;
     margin-right: 5%;
