--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .navbar-container {
   position: fixed;
   top: 0;
@@ -15,6 +14,7 @@
 }
 a {
   color: black;
+  font-weight: bold;
   margin-left: 30px;
   margin-right: 30px;
   text-decoration: none;
