--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -23,7 +23,11 @@ body {
 }
 
 .contact-box {
-  background: linear-gradient(135deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8));
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.9),
+    rgba(255, 255, 255, 0.8)
+  );
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 8px 15px aliceblue;
@@ -92,10 +96,13 @@ body {
   resize: vertical;
 }
 
-
+.social-media h3 {
+  margin-bottom: 30px;
+}
 .social-media {
   text-align: center;
   margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .social-icons {
